--- a/assets/stylesheet/main.css
+++ b/assets/stylesheet/main.css
@@ -1,10 +1,19 @@
 body {
     margin:0;
     padding:0;
-    background-color: rgba(0, 0, 0, 0.9);
 }
 * {
     box-sizing:border-box;
+}
+#load {
+    display: none;
+    background-color: rgba(0, 0, 0, 0.9);
+}
+#pre-loader {
+    display:block;
+}
+#pre-loader img {
+    margin: 10% auto;
 }
 .container-fluid {
     margin:0;
@@ -219,6 +228,11 @@ body {
     background-position:left bottom;
     color:black;
 }
+@media(max-width:768px) {
+    .people {
+        background-size:cover;
+    }
+}
 @media(max-width:430px) {
     .people h1 {
         font-size: 45px;
@@ -355,10 +369,10 @@ body {
 #drumkit p {
     position: absolute;
     top:50%;
-    left:50%;
+    left:45%;
     color:white;
     -webkit-transform:translateX(-50%);
-    transform: translateX(-50%);
+    transform: translateX(-35%);
     font-size: 25px;
     font-weight: bold;
 }
